--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,5 +6,6 @@
     <color name="dark_green">#57b757</color>
     <color name="light_cream">#fff4ef</color>
     <color name="dark_cream">#ffebe0</color>
+    <color name="text_green">#10571f</color>
 
 </resources>
