third commit - created and designed the Signup screen

--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -123,6 +123,7 @@
         android:background="@drawable/button_bg"
         android:fontFamily="@font/spicy_rice"
         android:text="@string/btnLogIn"
+        android:textColor="@color/white"
         android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -135,7 +136,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="42dp"
         android:fontFamily="@font/peralta"
-        android:text="@string/tVSignUp"
+        android:text="@string/tVSignUpOption"
         android:textAlignment="center"
         android:textColor="@color/text_green"
         android:textSize="18sp"
