--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,7 +68,8 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout2">
 
-        <fragment
+        <!--<fragment -->
+        <androidx.fragment.app.FragmentContainerView
             android:id="@+id/fragmentContainerView8"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
