--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -4,8 +4,10 @@
         <item>@font/amita_bold</item>
         <item>@font/bricolage_grotesque_semibold</item>
         <item>@font/contrail_one</item>
+        <item>@font/holtwood_one_sc</item>
         <item>@font/lemon</item>
         <item>@font/peralta</item>
+        <item>@font/shojumaru</item>
         <item>@font/spicy_rice</item>
     </array>
 </resources>
