11th commit - added recyclerview to basket fragment and added food items using BasketAdapter and also set the elevation of dropdown menu for location to null and set large heap as true in application tag of AndroidManifest.xml

--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -8,5 +8,6 @@
     </style>
     <style name="MyAutoCompleteTextView" parent="Widget.AppCompat.Light.AutoCompleteTextView">
         <item name="android:popupBackground">@color/dark_green</item>
+        <item name="android:popupElevation">@null</item>
     </style>
 </resources>
