13th commit - added and implemented the MenuBottomSheetFragment

--- a/app/src/main/res/layout/fragment_menu_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_menu_bottom_sheet.xml
@@ -21,7 +21,7 @@
             android:padding="5dp"
             android:scaleType="centerCrop"
             android:src="@drawable/rewind"
-            android:tint="@color/text_green" />
+            app:tint="@color/text_green" />
 
         <TextView
             android:id="@+id/tVFragmentBottomSheet"
